--- a/pyrf/resources/performance.yml
+++ b/pyrf/resources/performance.yml
@@ -1,12 +1,4 @@
 general:
- # Directory with input data file
- # /Users/thomasvuillaume/Work/CTA/Dev/cta-observatory/protopipe/test_analysis/ana = your analysis local path
- # Please refer to directory structure shown at Lugano
- indir: '//Users/thomasvuillaume/Work/CTA/Data/DL2/20191109_v0.1_v00'
- # Template name for input file
- template_input_file: 'dl2_gamma-diffuse_20deg_180deg_run9___cta-prod3-demo-2147m-LaPalma-baseline-mono.h5' # filled with mode and particle type
- # Directory for output files
- outdir: '/Users/thomasvuillaume/Work/CTA/Data/DL2/20191109_v0.1_v00'
  # Output table name
  output_table_name: 'table_best_cutoff'
 
@@ -14,7 +6,7 @@ analysis:
 
  # Theta square cut optimisation (opti, fixed, r68)
  thsq_opt:
-  type: 'opti'
+  type: 'r68'
   value: 0.2  # In degree, necessary for type fixed
 
  # Normalisation between ON and OFF regions
@@ -43,32 +35,32 @@ analysis:
 
 particle_information:
  gamma:
-  n_events_per_file: 22500000  #  10**5 * 10
+#  n_events_per_file: 22500000  #  10**5 * 10
   n_files: 1
-  e_min: 0.05
-  e_max: 50
-  gen_radius: 1000
-  diff_cone: 0
-  gen_gamma: 2
+#  e_min: 0.05
+#  e_max: 50
+#  gen_radius: 1000
+#  diff_cone: 0
+#  gen_gamma: 2
 
  proton:
-  n_events_per_file: 3750000000  #  2 * 10**5 * 20
+#  n_events_per_file: 3750000000  #  2 * 10**5 * 20
   n_files: 1
-  e_min: 0.01
-  e_max: 100
-  gen_radius: 2500
-  diff_cone: 1
-  gen_gamma: 2
+#  e_min: 0.01
+#  e_max: 100
+#  gen_radius: 2500
+#  diff_cone: 1
+#  gen_gamma: 2
   offset_cut: 1.
 
  electron:
-  n_events_per_file: 450000000  #  10**5 * 20
+#  n_events_per_file: 450000000  #  10**5 * 20
   n_files: 1
-  e_min: 0.005
-  e_max: 5
-  gen_radius: 1000
-  diff_cone: 1
-  gen_gamma: 2
+#  e_min: 0.005
+#  e_max: 5
+#  gen_radius: 1000
+#  diff_cone: 1
+#  gen_gamma: 2
   offset_cut: 1.
 
 column_definition:
