--- a/pyrf/resources/performance.yml
+++ b/pyrf/resources/performance.yml
@@ -49,7 +49,7 @@ particle_information:
 #  e_min: 0.01
 #  e_max: 100
 #  gen_radius: 2500
-#  diff_cone: 1
+#  diff_cone: 1 # bool - 0 or 1
 #  gen_gamma: 2
   offset_cut: 1.
 
