Add input and output config arguments to old config file

--- a/pyirf/resources/performance.yml
+++ b/pyirf/resources/performance.yml
@@ -1,6 +1,8 @@
 general:
  # Output table name
  output_table_name: 'table_best_cutoff'
+ indir: '' # where is the DL2 data
+ outdir: '' # where to store DL3 data
 
 analysis:
 
