Updating with gammapy 0.17 dependencies and adding the previously updated irf_maker in PR #8

--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - ipython
   - joblib
   - jupyter
-  - gammapy=0.18
+  - gammapy==0.18
   - matplotlib
   - numba
   - numpy>=1.15.4
