--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,14 @@
+astropy
+ctapipe==0.7
+gammapy==0.8
 ipython
 numpy
 numpydoc
+pandas
 pygments >= 2.5.1
+pytest
+pyyaml
+tables
 rinohtype
 sphinx
 nbsphinx
