--- a/pyirf/resources/config.yml
+++ b/pyirf/resources/config.yml
@@ -2,12 +2,26 @@ general:
  # Output table name
  output_table_name: 'table_best_cutoff'
 
+ #template_input_file
+ template_input_file: 'dl2_gamma_updated.h5'
+
+ #output_dir
+ outdir: ''
+
+ #input_dir
+ indir: ''
+
 analysis:
 
  # Theta square cut optimisation (opti, fixed, r68)
  thsq_opt:
   type: 'r68'
   value: 0.2  # In degree, necessary for type fixed
+
+ # Observation time to estimate best cuts corresponding to best sensitivity
+ obs_time:
+   value: 50
+   unit: 'h'
 
  # Normalisation between ON and OFF regions
  alpha: 0.2
@@ -31,37 +45,42 @@ analysis:
  etrue_binning:  # TeV
   emin: 0.05
   emax: 50
-  nbin: 42
+  nbin: 10
+
+# Energy migration binning
+ emigra_binning:
+  nbin: 31
 
 particle_information:
  gamma:
-#  n_events_per_file: 22500000  #  10**5 * 10
+  n_events_per_file: 22500000  #  10**7 * 2.25
   n_files: 1
-#  e_min: 0.05
-#  e_max: 50
-#  gen_radius: 1000
-#  diff_cone: 0
-#  gen_gamma: 2
+  e_min: 0.05
+  e_max: 50
+  gen_radius: 1000
+  diff_cone: 0
+  gen_gamma: 2
 
  proton:
-#  n_events_per_file: 3750000000  #  2 * 10**5 * 20
+  n_events_per_file: 22500000  #  10**7 * 2.25
   n_files: 1
-#  e_min: 0.01
-#  e_max: 100
-#  gen_radius: 2500
-#  diff_cone: 1 # bool - 0 or 1
-#  gen_gamma: 2
-  offset_cut: 1.
+  e_min: 0.05
+  e_max: 500
+  gen_radius: 1000
+  diff_cone: 10
+  gen_gamma: 2
+  offset_cut: 1
 
  electron:
-#  n_events_per_file: 450000000  #  10**5 * 20
+  n_events_per_file: 22500000  #  10**7 * 2.25
   n_files: 1
-#  e_min: 0.005
-#  e_max: 5
-#  gen_radius: 1000
-#  diff_cone: 1
-#  gen_gamma: 2
-  offset_cut: 1.
+  e_min: 0.05
+  e_max: 300
+  gen_radius: 1000
+  diff_cone: 10
+  gen_gamma: 2
+  offset_cut: 1
+
 
 column_definition:
  # Column name for true energy
