Build docs on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ install:
 script:
   - pytest --cov=pyirf --cov-report=xml
   - python examples/calculate_eventdisplay_irfs.py
+  - travis-sphinx -v --outdir=docbuild build --source=docs/
 
 after_script:
   - if [[ "$CONDA" == "true" ]];then
