Change author in setup to CTA ASWG

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = pyirf
 description = Python IACT IRF builder,
 url = https://github.com/cta-observatory/pyirf
-author = Julien Lefaucheur, Michele Peresano, Thomas Vuillaume, Maximilian Nöthe
+author = CTA Consortium, Analysis and Simulation Working Group
 author_email = thomas.vuillaume@lapp.in2p3.fr
 license = MIT
 long_description = file: README.rst
