Add PyPI deploy and metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,30 @@
 [metadata]
 name = pyirf
-description = Python IACT IRF builder,
+description = A python library to calculate IACT IRFs and Sensitivities
 url = https://github.com/cta-observatory/pyirf
 author = CTA Consortium, Analysis and Simulation Working Group
 author_email = thomas.vuillaume@lapp.in2p3.fr
 license = MIT
 long_description = file: README.rst
 github_project = cta-observatory/pyirf
+
+project_urls =
+    Bug Tracker = https://github.com/cta-observatory/pyirf/issues
+    Documentation = https://cta-observatory.github.io/pyirf
+    Source Code = https://github.com/cta-observatory/pyirf
+
+classifiers =
+    Development Status :: 4 - Beta
+    License :: OSI Approved :: MIT License
+    Intended Audience :: Science/Research
+    Topic :: Scientific/Engineering :: Astronomy
+    Topic :: Scientific/Engineering :: Physics
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+
+requires-dist = setuptools
 
 [options]
 python_requires = >=3.6
