Fix deploy condition in travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,4 +62,4 @@ deploy:
   on:
     tags: true
     branch: master
-    condition: $TRAVIS_PYTHON_VERSION = "3.7"
+    condition: $PYTHON_VERSION = "3.7"
