--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,15 @@
-# A conda environment with all useful package for ctapipe developers
-name: pyirf-dev
+name: pyirf
 
 channels:
   - default
 dependencies:
-  - python=3.7
+  - python>=3.6
   - numpy
   - ipython
   - jupyter
   - matplotlib
   - scipy
+  - astropy>=4.0.2,<5
   - setuptools
   # tests
   - pytest
@@ -20,7 +20,6 @@ dependencies:
   - sphinx_rtd_theme
   - pip
   - pip:
-    - astropy>=4.0.2,<5
     - nbsphinx
     - sphinx_automodapi
     - uproot~=3.0
