--- a/setup.cfg
+++ b/setup.cfg
@@ -28,3 +28,12 @@ requires-dist = setuptools
 
 [options]
 python_requires = >=3.6
+
+[flake8]
+exclude=
+  build,
+  docs,
+  .eggs
+max-line-length=90
+select = C,E,F,W,B,B950
+ignore = E501,W503,E203
