--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ after_script:
 
 after_success:
   - codecov
+  - pip install travis-sphinx
   - travis-sphinx -v --outdir=docbuild deploy
 
 deploy:
