--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,3 +68,12 @@ jobs:
             pip install -U pip setuptools wheel
             pip install --use-feature=2020-resolver -e .[all]
             python examples/calculate_eventdisplay_irfs.py
+
+      - name: Deploy to gihub pages
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: docs/_build/html
+          CLEAN: true
+          SINGLE_COMMIT: true
