--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
           pre-build-command: |
             apt update --yes && apt install --yes git build-essential pandoc
             pip install -U pip setuptools wheel
-            pip install --use-feature=2020-resolver -e .[all]
+            pip install --use-feature=2020-resolver -e '.[docs]'
             python examples/calculate_eventdisplay_irfs.py
 
       - name: Deploy to gihub pages
