--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,8 +1,41 @@
-# This file defines the primary maintainers for areas of the ctapipe codebase
-# Utilises the Github codeowner functionality to automatically request reviews for PRs that edit corresponding code
-# https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners
+# EXAMPLE FROM GITHUB DOCS TO FILL OUT BY AUTHORS & CONTRIBUTORS
 
-pyirf/io/io.py  @HealthyPear
-notebooks/comparison_with_EventDisplay.ipynb  @HealthyPear
-resources/config.yml  @HealthyPear
-pyirf/scripts/make_DL3.py @HealthyPear
+# This is a comment.
+# Each line is a file pattern followed by one or more owners.
+
+# These owners will be the default owners for everything in
+# the repo. Unless a later match takes precedence,
+# @global-owner1 and @global-owner2 will be requested for
+# review when someone opens a pull request.
+# *       @global-owner1 @global-owner2
+* @maxnoe @HealthyPear
+
+# Order is important; the last matching pattern takes the most
+# precedence. When someone opens a pull request that only
+# modifies JS files, only @js-owner and not the global
+# owner(s) will be requested for a review.
+# *.js    @js-owner
+
+# You can also use email addresses if you prefer. They'll be
+# used to look up users just like we do for commit author
+# emails.
+# *.go docs@example.com
+
+# In this example, @doctocat owns any files in the build/logs
+# directory at the root of the repository and any of its
+# subdirectories.
+# /build/logs/ @doctocat
+
+# The `docs/*` pattern will match files like
+# `docs/getting-started.md` but not further nested files like
+# `docs/build-app/troubleshooting.md`.
+# docs/*  docs@example.com
+
+# In this example, @octocat owns any file in an apps directory
+# anywhere in your repository.
+# apps/ @octocat
+
+# In this example, @doctocat owns any file in the `/docs`
+# directory in the root of your repository and any of its
+# subdirectories.
+# /docs/ @doctocat
