--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,7 @@ jobs:
             pip install -U pip setuptools wheel
             pip install --use-feature=2020-resolver -e '.[docs]'
             python examples/calculate_eventdisplay_irfs.py
+          build-command: make html SPHINXOPTS="-W --keep-going -n"
 
       - name: Deploy to gihub pages
         # only run on push to master
