--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,8 @@ jobs:
           docs-folder: "docs/"
           pre-build-command: |
             apt update --yes && apt install --yes git build-essential pandoc curl
-            pip install -U pip setuptools wheel
-            pip install --use-feature=2020-resolver -e '.[docs]'
+            pip install -U pip setuptools wheel sphinx
+            pip install -e '.[docs]'
             python examples/calculate_eventdisplay_irfs.py
           build-command: make html SPHINXOPTS="-W --keep-going -n --color"
 
