--- a/setup.cfg
+++ b/setup.cfg
@@ -24,10 +24,11 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
 
-requires-dist = setuptools
+requires_dist = setuptools
 
 [options]
 python_requires = >=3.6
+setup_requires = setuptools_scm[toml]
 
 [flake8]
 exclude=
