--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,18 +33,11 @@ jobs:
           pip install --use-feature=2020-resolver -e .[all]
           pip freeze
 
-      - name: Tests without external data
+      - name: Tests
         run: |
-          pytest -m "not needs_data" --cov=pyirf --cov-report=xml
+          pytest --cov=pyirf --cov-report=xml
 
       - uses: codecov/codecov-action@v1
-
-      - name: Tests with external data
-        env:
-          DATA_PASSWORD: ${{ secrets.DATA_PASSWORD }}
-        run: |
-          ./download_test_data.sh
-          pytest -m "needs_data"
 
   docs:
     runs-on: ubuntu-latest
@@ -65,13 +58,6 @@ jobs:
           pip install -e .[docs]
           git describe --tags
           python -c 'import pyirf; print(pyirf.__version__)'
-
-      - name: Download data and run example
-        env:
-          DATA_PASSWORD: ${{ secrets.DATA_PASSWORD }}
-        run: |
-          ./download_test_data.sh
-          python examples/calculate_eventdisplay_irfs.py
 
       - name: Build docs
         run: cd docs && make html SPHINXOPTS="-W --keep-going -n --color -j auto"
