Changed environment.yml from 'gammapy=0.19' to gammapy~=0.19.0'
From @maxno: gammapy is in the pip section of the conda environment as there were problems with installing it from conda-forge at the time.
Please use the same syntax as in the setup.py for now ~=0.19.0 meaning compatible to 0.19 and at least 0.19.0

--- a/environment.yml
+++ b/environment.yml
@@ -26,5 +26,5 @@ dependencies:
     - sphinx_automodapi
     - uproot
     - awkward1
-    - gammapy=0.19
+    - gammapy~=0.19.0
     - ogadf_schema
