--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,13 @@ jobs:
       - name: Install dependencies
         run: |
           python --version
-          pip install -U pip setuptools wheel
-          pip install --use-feature=2020-resolver -e .[all]
+          pip install -U pip setuptools wheel restructuredtext_lint
+          pip install -e .[all]
           pip freeze
+
+      - name: Check README
+        run: |
+          rst-lint README.rst
 
       - name: Tests
         run: |
