--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,10 +58,14 @@ jobs:
       - name: Install doc dependencies
         run: |
           sudo apt update --yes && sudo apt install --yes git build-essential pandoc curl graphviz
-          pip install -U pip setuptools wheel
+          pip install -U pip setuptools wheel towncrier
           pip install -e .[docs]
           git describe --tags
           python -c 'import pyirf; print(pyirf.__version__)'
+
+      - name: Produce Changelog
+        run: |
+          towncrier build --yes
 
       - name: Build docs
         run: cd docs && make html SPHINXOPTS="-W --keep-going -n --color -j auto"
