--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
       - uses: actions/cache@v3 
         id: cache-irfs
         with:
-          path: ./pyirf/recources/irfs
-          key: ${{ runner.OS }}-irf-cache-${{ hashFiles('*.fit.gz') }}
+          path: ./irfs
+          key: irf-cache-${{ hashFiles('**/*.fits.gz') }}
 
       # make sure we have version info
       - run: git fetch --tags
