--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,11 +1,9 @@
 version: 2
 
 python:
-  version: 3.7
+  version: "3.8"
   install:
     - method: pip
       path: .
       extra_requirements:
         - docs
-        - tests
-  system_packages: false
