--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pyirf
 description = A python library to calculate IACT IRFs and Sensitivities
 url = https://github.com/cta-observatory/pyirf
 author = CTA Consortium, Analysis and Simulation Working Group
-author_email = maximilian.noethe@tu-dortmund.de
+author_email = maximilian.linhoff@tu-dortmund.de
 license = MIT
 long_description = file: README.rst
 github_project = cta-observatory/pyirf
