--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -10,6 +10,8 @@
 # *       @global-owner1 @global-owner2
 * @maxnoe @HealthyPear
 
+pyirf/interpolation/* @RuneDominik
+
 # Order is important; the last matching pattern takes the most
 # precedence. When someone opens a pull request that only
 # modifies JS files, only @js-owner and not the global
